--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -7,13 +8,19 @@ body {
     padding: 0;
 }
 #cabecera{
-    background: #33a;
+    background: #37488b;
     color: white;
     font-weight: bold;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     margin: 0;
     padding: 0.5em;
 }
+
+#cabecera #logo {
+    width: 40px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline{
     padding: 0 0 0 1em;
     font-weight: normal;
@@ -32,5 +39,6 @@ body {
     font-size: 20px;
 }
 #post{
+    background: white;
     padding: 1em;
 }
